added swagger for project and updated controller to accept relevant body params
