# Servers/utils/project.utils.ts
@@ -14,20 +14,33 @@ export const getProjectByIdQuery = async (id: number): Promise<Project | null> =
 };
 
 export const createNewProjectQuery = async (project: {
-  name: string;
-  description: string;
+  name: string
+  description: string
+  last_updated: Date
+  owner_id: number
+  compliance_status: string
+  controls_completed: number
+  requirements_completed: number
 }): Promise<Project> => {
   console.log("createNewProject", project);
   const result = await pool.query(
-    "INSERT INTO projects (name, description) VALUES ($1, $2) RETURNING *",
-    [project.name, project.description]
+    "INSERT INTO projects (name, description, last_updated, owner_id, compliance_status, controls_completed, requirements_completed) VALUES ($1, $2, $3, $4, $5, $6, $7) RETURNING *",
+    [project.name, project.description, project.last_updated, project.owner_id, project.compliance_status, project.controls_completed, project.requirements_completed]
   );
   return result.rows[0];
 };
 
 export const updateProjectByIdQuery = async (
   id: number,
-  project: { name?: string; description?: string }
+  project: {
+    name?: string
+    description?: string
+    last_updated?: Date
+    owner_id?: number
+    compliance_status?: string
+    controls_completed?: number
+    requirements_completed?: number
+  }
 ): Promise<Project | null> => {
   console.log("updateProjectById", id, project);
   const fields = [];
@@ -42,12 +55,32 @@ export const updateProjectByIdQuery = async (
     fields.push("description = $2");
     values.push(project.description);
   }
+  if(project.last_updated) {
+    fields.push("last_updated = $3")
+    values.push(project.last_updated)
+  }
+  if(project.owner_id) {
+    fields.push("owner_id = $4")
+    values.push(project.owner_id)
+  }
+  if(project.compliance_status) {
+    fields.push("compliance_status = $5")
+    values.push(project.compliance_status)
+  }
+  if(project.controls_completed) {
+    fields.push("controls_completed = $6")
+    values.push(project.controls_completed)
+  }
+  if(project.requirements_completed) {
+    fields.push("requirements_completed = $7")
+    values.push(project.requirements_completed)
+  }
 
   if (fields.length === 0) {
     throw new Error("No fields to update");
   }
 
-  query += fields.join(", ") + " WHERE id = $3 RETURNING *";
+  query += fields.join(", ") + " WHERE id = $8 RETURNING *";
   values.push(id);
 
   const result = await pool.query(query, values);
